[workspace]
members = [
    "cstree",
    "cstree-derive",
    "test_suite",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.12.0" # when updating, also update `#![doc(html_root_url)]` and any inter-crate dependencies (such as `cstree`'s dependency on `cstree-derive`)
authors = [
    "Domenic Quirl <DomenicQuirl@pm.me>",
    "Aleksey Kladov <aleksey.kladov@gmail.com>",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/domenicquirl/cstree"
readme = "README.md"
rust-version = "1.71"

[profile.release]
debug = true
