[package]
name                   = "cstree_event"
description            = "Event-based parsing framework with first-class support for concrete syntax trees"
categories             = ["parsing", "compilers"]
keywords               = ["cstree", "events", "parsing", "cst"]
edition.workspace      = true
version                = "0.12.0-rc.0"                                                                      # TODO: release
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
readme.workspace       = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

concurrent = ["dep:parking_lot", "dep:triomphe"]

[dependencies]
cstree = { path = "../cstree" }

[dependencies.parking_lot]
version  = "0.12.1"
optional = true

[dependencies.triomphe]
version          = "0.1"
default-features = false
features         = ["stable_deref_trait", "std"]
optional         = true

[dev-dependencies]
cstree = { path = "../cstree" }
